--- a/3-lending/rai-test/README
+++ b/3-lending/rai-test/README
@@ -25,6 +25,8 @@ The general usage of the platform for borrowers looking to generate leverage on 
 5. PartialWithdrawCollateral: Withdraw amount of free XRD collateral not required to maintain the RAI position debt.
 6. Close Position: Callable with a bucket of RAI, the function will pay off all outstanding debt and return the underlying collateral.
 
+<img src="https://www.plantuml.com/plantuml/svg/bLRVYnit47xNNp7G59BMRhc7lfYIvhWZS93Imoca4F8mbiPUOQsqqGyxJkd_tf7MUzgzxb9oSB3MV3FpVVFDoduJ8lgOMYE4-FZ39rY_XZywieykwAYT5UCF6xYdBZ_3dJC68taqy0pnkxOHTgWE19uawIx2tdcmT8Rk2WAjLXoCoLk83YGQGvxRCvD8S2kZFj5G4FuMujd9MZ77Uu_dsS2jKfNSBEAHzMeq7tHi55VvN_H5kRCL8dVSmFl6JOH0vvtRhthPszk7AwnyzFGvKOYamAPsHnxSFaFWPUgoxXQ_mCvvpmMnTOaJNjpyzClcnGt89qe_C_xLq3ewJs0SMcwghTGT6a2hW3ed6o4cofUPebAmI_98iGo_gXTNgKkfDRwb3YzGL1H1bSwFmCB9i-eLXCANZL_ap1Yop0RbaGyluAb5RRKzbAfw3-v4laEjX5WqRPdjSiPmDb8FMLbnXGcqgHs7ziOvtpl6wlZ_gPluHqpM7zQyCTCj4ltcS8H3TyQ56hdESoQqJ1x-Yws-pySddpRm9nuf31imREJOmUWYcYSVNwrWxucoQSCxMqSpDh2UzjXbBwSJ-_YTysWFzEarlDEVarPSP0DtQ0nnvSlJeVD1L42HCNQzD2tBY9UMR8INCrjNHGrQp51HrM9LoRZXsyG910zjvrbAQR46JF9P2WHNAx6xv44oZmD5w7fJmPEYjki1Uo3k42-YjieZOGZFuz6xwBZqWmtEdCZAomOU0dJNOz3Ny_XRlhg7l7N--wRa_kQToU3RTwxCXuRig520P1NvEWFzbHJSR6xWt92diXvv4Ie0_jhUmmbD8lYrc1PIrvbBVzGlt5S2rr5PeEoSD2xavs6qePmwoqbeZ3kFXXfcEMzhlCzWYYUDt0kBXLDVGlJCzC1vjyOKXeqph34KCpEGMlYUxHkBEc4o4L1AvrNc6Xt4XhGlmB7CXeoQ9VbsbepIGRhayP3VMxH7yCd26gpZXz1Ssm1zqH6mY9iGFci-s17WpX1Z1_AL6J_EURH8S7bQ4wQTfxnTUM91OXd8yB8L4_RUjULgpQ72eKL_fCY4OtETr0hmv7G1I8-X6P1zTE1UETVVC7SDoUEWuFsLlvWzpV1j6SfyV0Fld3oE_2jVRLs_HSneyjicYBxKx3sx0eb6fams5EPb_EM-7PUlTsrPytn3eAbMbPVDNAfRTVdozz4RiYgrvby0">
+
 For liquidators, they may use the following functions:
 1. Print All Positions: This function returns a list of all current positions at the protocol in the info logs of the Radix Engine. The Web Frontend UI displays the logs, and allows liquidators to manually inspect which positions are available to be liquidated.
 2. Liquidate: Providing a position id and RAI bucket, pay off the RAI debt of the undercollateralized position in exchange for foreclosing on the underlying collateral position. Liquidators are incentivized to monitor positions and call the liquidate function as they may be able to "purchase" the underlying collateral at a discount by paying off the loan.
@@ -40,3 +42,13 @@ The instantiation of the RAI Lending Platform requires a protocol to provide the
 2. Instantiate an oracle component from the blueprint (and interact with this new component to set/get the price of xrd used for calculations in the contract)
 3. Publish the RAI Lending Platform blueprint to the ledger
 4. Instiate the RAI Lending Platform component, passing it in the ComponentAddress of the instantiated oracle from step 2. 
+
+# Web Frontend UI
+
+The web frontend UI is provided in a git submodule in this folder. A hosted version of the web frontend is available at https://rai-scrypto-lending-platform.dekentz.repl.co/
+Please note that the Babylon PTE Browser Extension is required to interact with the RAI Lending Platform with a test execution environment.
+
+To access a local copy of the Web Frontend UI source code, 
+1. git submodule init
+2. git submodule update
+This should fetch the source code of the Web Frontend to the local environment. 
